# Traffic_light

./: .qmlls.ini  CMakeLists.txt  Main.qml  README.md  main.cpp  trafficlightcontroller.cpp  trafficlightcontroller.h
